--- a/.github/workflows/test-app-ubuntu.yml
+++ b/.github/workflows/test-app-ubuntu.yml
@@ -166,11 +166,12 @@ jobs:
         run: |
           BASE_64=$(cat ${{ env.ENV_VARS_ARTIFACTS_PATH }}/${{ inputs.env-vars-artifacts-file-name }})
           echo "base64: $BASE_64"
+          echo "$BASE_64" | base64 --decode > /tmp/encrypted.bin
 
           BINARY_ENCRYPTED=$(echo "$BASE_64" | base64 --decode)
           echo "binary: $BINARY_ENCRYPTED"
-          ENV_VARS_DECRYPTED=$(echo -n "$BINARY_ENCRYPTED" | openssl enc -${{ inputs.env-vars-cipher }} -${{ inputs.env-vars-key-derivation }} -d -salt -k "${{ secrets.encrypt_key }}");
-          echo "$ENV_VARS_DECRYPTED" > ${{ env.ENV_VARS_FILE }}
+          # ENV_VARS_DECRYPTED=$(echo -n "$BINARY_ENCRYPTED" | openssl enc -${{ inputs.env-vars-cipher }} -${{ inputs.env-vars-key-derivation }} -d -salt -k "${{ secrets.encrypt_key }}");
+          openssl enc -${{ inputs.env-vars-cipher }} -${{ inputs.env-vars-key-derivation }} -d -salt -k "${{ secrets.encrypt_key }}" -in /tmp/encrypted.bin -out ${{ env.ENV_VARS_FILE }}
 
       - name: Map environment variable artifacts file
         if: ${{ inputs.env-vars-artifacts != '' && inputs.env-vars-artifacts-enctypted == false }}
