--- a/.github/workflows/test-app-ubuntu.yml
+++ b/.github/workflows/test-app-ubuntu.yml
@@ -90,6 +90,9 @@ on:
       encrypt_key:
         description: 'The cryptographic key used when decrypting the environment variables artifacts contents.'
         required: false
+      storage-account-key:
+        description: 'The account key used to access the account where code coverage artifacts would be stored.'
+        required: false
 
 jobs:
   test:
@@ -310,4 +313,6 @@ jobs:
       storage-account-name: wintcodecoverage
       storage-container-name: ${{ needs.calculate-storage-container-name.outputs.storage_container_name }}
       artifacts-name: report-generator-history
-    secrets: inherit
+    secrets:
+      azure-credentials: ${{ secrets.azure-credentials }}
+      account-key: ${{ secrets.storage-account-key }}
