--- a/.github/workflows/test-app-ubuntu.yml
+++ b/.github/workflows/test-app-ubuntu.yml
@@ -49,7 +49,7 @@ on:
         required: false
         default: 'env-vars.txt'
         type: string
-      env-vars-artifacts-enctypted:
+      env-vars-artifacts-encrypted:
         description: 'true if the the uploaded environment variable artifacts are encrypted; otherwise, false. If true, ensure the  env-vars-cipher, env-vars-key-derivation and the secret encrypt_key are specified accordingly.'
         required: false
         default: false
@@ -156,34 +156,26 @@ jobs:
         with:
           creds: ${{ secrets.azure-credentials }}
 
-      - name: Download environment variables artifacts
+      - name: Download env-vars artifacts
         if: ${{ inputs.env-vars-artifacts != '' }}
         uses: actions/download-artifact@v2
         with:
           name: ${{ inputs.env-vars-artifacts }}
           path: ${{ env.ENV_VARS_ARTIFACTS_PATH }}
       
-      - name: Decrypt environment variables
-        if: ${{ inputs.env-vars-artifacts != '' && inputs.env-vars-artifacts-enctypted == true }}
+      - name: Decrypt env-vars
+        if: ${{ inputs.env-vars-artifacts != '' && inputs.env-vars-artifacts-encrypted == true }}
         shell: bash
         run: |
-          BASE_64=$(cat ${{ env.ENV_VARS_ARTIFACTS_PATH }}/${{ inputs.env-vars-artifacts-file-name }})
-          echo "base64: $BASE_64"
-          # echo "$BASE_64" | base64 --decode > /tmp/encrypted.bin
-
-          # BINARY_ENCRYPTED=$(echo "$BASE_64" | base64 --decode)
-          # echo "binary: $BINARY_ENCRYPTED"
-          # # ENV_VARS_DECRYPTED=$(echo -n "$BINARY_ENCRYPTED" | openssl enc -${{ inputs.env-vars-cipher }} -${{ inputs.env-vars-key-derivation }} -d -salt -k "${{ secrets.encrypt_key }}");
-          # openssl enc -${{ inputs.env-vars-cipher }} -${{ inputs.env-vars-key-derivation }} -d -salt -k "${{ secrets.encrypt_key }}" -in /tmp/encrypted.bin -out ${{ env.ENV_VARS_FILE }}
           openssl enc -${{ inputs.env-vars-cipher }} -${{ inputs.env-vars-key-derivation }} -d -base64 -A -salt -k "${{ secrets.encrypt_key }}" -in ${{ env.ENV_VARS_ARTIFACTS_PATH }}/${{ inputs.env-vars-artifacts-file-name }} -out ${{ env.ENV_VARS_FILE }}
 
-      - name: Map environment variable artifacts file
-        if: ${{ inputs.env-vars-artifacts != '' && inputs.env-vars-artifacts-enctypted == false }}
+      - name: Map not encrypted env-vars artifacts file
+        if: ${{ inputs.env-vars-artifacts != '' && inputs.env-vars-artifacts-encrypted == false }}
         shell: bash
         run: |
           echo "ENV_VARS_FILE=${{ env.ENV_VARS_ARTIFACTS_PATH }}/${{ inputs.env-vars-artifacts-file-name }}" >> $GITHUB_ENV
 
-      - name: Set test environment variables
+      - name: Set test env-vars
         if: ${{ inputs.env-vars-artifacts != '' }}
         shell: bash
         run: |
@@ -193,16 +185,6 @@ jobs:
             echo "$key=$value" >> $GITHUB_ENV
           done < ${{ env.ENV_VARS_FILE }}
   
-      # - name: Set test environment variables
-      #   if: ${{ inputs.env-vars-artifacts != '' }}
-      #   shell: bash
-      #   run: |
-      #     while IFS= read -r line; do
-      #       key=${line%%=*}
-      #       value=${line#*=}
-      #       echo "$key=$value" >> $GITHUB_ENV
-      #     done < ${{ env.ENV_VARS_ARTIFACTS_PATH }}/${{ inputs.env-vars-artifacts-file-name }}
-
       - name: Get nuget cache key suffix
         id: get_cache_key
         shell: bash
