--- a/.github/workflows/build-pack-push-package.yml
+++ b/.github/workflows/build-pack-push-package.yml
@@ -12,6 +12,12 @@ on:
         required: true
         type: string
 
+      dotnet-version:
+          description: 'The main version of .net to install. The default value is 8.'
+          required: false
+          default: '8'
+          type: string
+
     secrets:
       codesigning-cert:
         description: 'The base64 string that represent the code signing certificate.'
@@ -34,7 +40,7 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: |
-            7.0.x
+            ${{ inputs.dotnet-version }}.0.x
 
       - name: Add GitHub Nuget registry
         run: dotnet nuget add source --username WintDev --password ${{ secrets.nuget-read-pat }} --store-password-in-clear-text --name WintDev "${{ env.WINT_GITHUB_NUGET_SOURCE_URL }}"
