--- a/.github/workflows/build-test-upload-app.yml
+++ b/.github/workflows/build-test-upload-app.yml
@@ -12,6 +12,12 @@ on:
         required: true
         type: string
 
+      dotnet-version:
+        description: 'The main version of .net to install. The default value is 8.'
+        required: false
+        default: '8'
+        type: string
+
       artifacts-name:
         description: 'The name of the artifacts that will contain the function app bits.'
         required: true
@@ -37,11 +43,11 @@ jobs:
       WINT_GITHUB_NUGET_SOURCE_URL: 'https://nuget.pkg.github.com/WintDev/index.json'
 
     steps:
-      - name: Install dotnet 7
+      - name: Install dotnet
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: |
-            7.0.x
+            ${{ inputs.dotnet-version }}.0.x
 
       - name: Add GitHub Nuget registry
         run: dotnet nuget add source --username WintDev --password ${{ secrets.nuget-read-pat }} --store-password-in-clear-text --name WintDev "${{ env.WINT_GITHUB_NUGET_SOURCE_URL }}"
@@ -75,7 +81,7 @@ jobs:
           dotnet publish "${{ inputs.assembly-url }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.ARTIFACTS_PATH }}/${{ inputs.package-name }}"
 
       - name: 'Upload app artifact(s)'
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: '${{ inputs.artifacts-name }}'
           path: ${{ env.ARTIFACTS_PATH }}
