--- a/.github/workflows/test-app-windows.yml
+++ b/.github/workflows/test-app-windows.yml
@@ -12,6 +12,13 @@ on:
         type: boolean
         default: false
 
+      dotnet-version:
+          description: 'The main version of .net to install. The default value is 8.'
+          required: false
+          default: '8'
+          type: string
+  
+
     secrets:
       nuget-read-pat:
         description: 'The Personal Access Token used to access the WintDev internal nuget feed when restoring.'
@@ -33,7 +40,7 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: |
-            7.0.x
+            ${{ inputs.dotnet-version }}.0.x
 
       - name: Add GitHub Nuget registry
         run: dotnet nuget add source --username WintDev --password ${{ secrets.nuget-read-pat }} --store-password-in-clear-text --name WintDev "${{ env.WINT_GITHUB_NUGET_SOURCE_URL }}"
