add permissions contents.read

--- a/.github/workflows/build-pack-push-package.yml
+++ b/.github/workflows/build-pack-push-package.yml
@@ -37,7 +37,7 @@ jobs:
       CONFIGURATION: release
     permissions:
       packages: write
-
+      contents: read
     steps:
       - name: Install net${{ inputs.dotnet-version }}
         uses: actions/setup-dotnet@v3
