--- a/.github/workflows/build-pack-push-package.yml
+++ b/.github/workflows/build-pack-push-package.yml
@@ -33,6 +33,8 @@ jobs:
       CONFIGURATION: release
     permissions:
       packages: write
+      contents: read
+
     steps:
       - name: Install dotnet
         uses: actions/setup-dotnet@v1
