--- a/.github/workflows/build-pack-push-package.yml
+++ b/.github/workflows/build-pack-push-package.yml
@@ -29,6 +29,10 @@ jobs:
     env:
       WINT_GITHUB_NUGET_SOURCE_URL: 'https://nuget.pkg.github.com/WintDev/index.json'
       CONFIGURATION: release
+    permissions:
+      packages: write
+      contents: read
+  
     steps:
       - name: Install net7
         uses: actions/setup-dotnet@v3
