--- a/.github/workflows/test-app-windows.yml
+++ b/.github/workflows/test-app-windows.yml
@@ -36,8 +36,8 @@ jobs:
       WINT_GITHUB_NUGET_SOURCE_URL: 'https://nuget.pkg.github.com/WintDev/index.json'
 
     steps:
-      - name: Install dotnet 7
-        uses: actions/setup-dotnet@v3
+      - name: Install dotnet
+        uses: actions/setup-dotnet@v4
         with:
           dotnet-version: |
             ${{ inputs.dotnet-version }}.0.x
@@ -46,7 +46,7 @@ jobs:
         run: dotnet nuget add source --username WintDev --password ${{ secrets.nuget-read-pat }} --store-password-in-clear-text --name WintDev "${{ env.WINT_GITHUB_NUGET_SOURCE_URL }}"
 
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Get nuget cache key suffix
         id: get_cache_key
@@ -57,7 +57,7 @@ jobs:
   
       - name: Cache nuget restore artifacts
         if: ${{ steps.get_cache_key.outputs.hash != '' }} 
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.nuget/packages
           key: ${{ runner.os }}-nuget-${{ steps.get_cache_key.outputs.hash }}
