--- a/.github/workflows/test-app-ubuntu.yml
+++ b/.github/workflows/test-app-ubuntu.yml
@@ -180,12 +180,10 @@ jobs:
         if: ${{ inputs.env-vars-artifacts != '' }}
         shell: bash
         run: |
-          cat ${{ env.ENV_VARS_FILE }}
           while IFS= read -r line; do
-            echo "row found"
             key=${line%%=*}
             value=${line#*=}
-            echo "Key: $key, Value: $value"
+            echo "Setting Environment Variable: $key=$value"
             echo "$key=$value" >> $GITHUB_ENV
           done < ${{ env.ENV_VARS_FILE }}
 
