--- a/.github/workflows/test-app-ubuntu.yml
+++ b/.github/workflows/test-app-ubuntu.yml
@@ -132,6 +132,13 @@ jobs:
           dotnet-version: |
             ${{ inputs.dotnet-version }}.0.x
 
+
+      - name: Install Tesseract and Leptonica dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y tesseract-ocr
+          sudo apt-get install -y libleptonica-dev
+
       - name: Add GitHub Nuget registry
         run: |
           dotnet nuget add source --username WintDev --password ${{ secrets.nuget-read-pat }} --store-password-in-clear-text --name WintDev "${{ env.WINT_GITHUB_NUGET_SOURCE_URL }}"
